# mks-rover-autonomy

./: .gitignore  AUTONOMY_ARCHITECTURE.md  AUTONOMY_VISUALS.md  README.md  ROS2_SETUP.md  SETUP_RUNBOOK.md  driver_info.md  imu_tester.py  summary_failed_approaches.md
.github/: copilot-instructions.md
examples/: example_robot.urdf.xacro
src/: helper.py
src/cpp_number_sum/: CMakeLists.txt  package.xml
src/cpp_number_sum/src/: number_publisher.cpp  sum_subscriber.cpp
src/cube_detection/: package.xml  setup.cfg  setup.py
src/cube_detection/cube_detection/: cube_chase_controller.py  cube_detector_node.py
src/cube_detection/launch/: cube_detection.launch.py
src/environment_mapping/: README.md  package.xml  setup.cfg  setup.py
src/environment_mapping/environment_mapping/: auto_velocity_control.py  environment_mapping_node.py  pointcloud_accumulator.py
src/environment_mapping/launch/: rtabmap_realsense.launch.py
src/mks_control/: CMakeLists.txt  package.xml
src/mks_control/launch/: teleop_drive.launch.py
src/mks_control/src/: cmd_vel_to_drive.cpp  joy_to_cmd_vel.cpp
src/mks_description/: CMakeLists.txt  README.md  package.xml  view_with_rqt.md
src/mks_description/config/: eve_controller.yaml
src/mks_description/launch/: ignition.launch.py  rsp.launch.py  spawn.launch.py
src/mks_description/meshes/simplified_meshes/: back_left_leg_simp.stl  back_right_leg_simp.stl  back_right_wheel_simp.stl  chassis_simp.stl  front_left_leg_simp.stl  front_left_wheel_simp.stl  front_right_leg_simp.stl
src/mks_description/sdf/: eve.sdf
src/mks_description/src/: spin_wheel.py
src/mks_description/urdf/: TODO.md  eve.urdf  eve.urdf.xacro  prompt.txt
src/mks_description/worlds/: mks_world.sdf
src/mks_navigation/: package.xml  setup.cfg  setup.py
src/mks_navigation/config/: nav2_params.yaml
src/mks_navigation/launch/: nav2_bringup.launch.py
src/mks_navigation/resource/: mks_navigation
src/mks_orchestration/: FrontierServiceNode.py  HighOrchestrationNode.py  package.xml  setup.cfg  setup.py
src/mks_orchestration/launch/: autonomy_orchestration.launch.py
src/mks_orchestration/mks_orchestration/: HighOrchestrationNode.py  __init__.py
src/py_talker_listener/: package.xml  setup.cfg  setup.py
src/py_talker_listener/py_talker_listener/: listener.py  talker.py
src/yolomodel_python/: Yaogo.py
