<?xml version="1.0"?>
<package format="3">
  <name>mks_orchestration</name>
  <version>0.0.1</version>
  <description>High-level orchestration node for mission flow and cube tracking.</description>
  <maintainer email="mukundsrinivasan0@gmail.com">mksneo</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
